--- a/Youtube Old Layout.user.css
+++ b/Youtube Old Layout.user.css
@@ -16,7 +16,7 @@
 @advanced checkbox old-dark-theme "🌑 Dark Navigation Bars" 0
 @advanced checkbox remove-bg-playlist "❌ Remove Background Playlists" 0
 @advanced checkbox remove-text-btn "❌ Remove Text On Buttons" 0
-@advanced checkbox remove-chips "❌ Remove Chips🍟 idk what does it call. u can tell me via email" 1
+@advanced checkbox remove-chips "❌ Remove Chips" 0
 @advanced checkbox hide-share-btn "🫣 Hide Share Button" 0
 @advanced checkbox hide-download-btn "🫣 Hide Download Button" 0
 @advanced checkbox hide-clip-btn "🫣 Hide Clip Button" 0
@@ -25,10 +25,7 @@
 @advanced checkbox fix-search-results  "➡️ Align the search results to the center" 0
 
 ==/UserStyle== */
-
-// @advanced checkbox fix-homepage  "🏠 Homepage 6 video per row" 0
-
-
+// @advanced checkbox fix-homepage  "🏠 Homepage 6 videos per row" 0
 /*
 Support me: https://ko-fi.com/sapondanaisriwan 
 Support me: https://ko-fi.com/sapondanaisriwan
@@ -42,16 +39,25 @@ Support me: https://ko-fi.com/sapondanaisriwan
         --sub-red-btn: #CC0000;
         --sub-white--text-btn: #F2F2F2;
         --sub-black-bg-btn: #303030;
-    } 
+    }
 
-    /* custom-like-dislike-color */
+    /* Custom like/dislike color */
     if (like-dislike-color1=="Enabled") {
+        /* Video container */
         #segmented-like-button button[aria-pressed="true"] yt-icon * {
             fill: like-dislike-color2 !important;
             stroke: none;
         }
-
         #segmented-dislike-button button[aria-pressed="true"] yt-icon {
+            fill: like-dislike-color2 !important;
+        }
+
+        /* Comments section */
+        #like-button yt-button-shape button[aria-pressed="true"] yt-icon {
+            fill: like-dislike-color2 !important;
+        }
+
+        #dislike-button yt-button-shape button[aria-pressed="true"] yt-icon {
             fill: like-dislike-color2 !important;
         }
     }
@@ -112,8 +118,8 @@ Support me: https://ko-fi.com/sapondanaisriwan
         #flexible-item-buttons yt-button-shape button {
             padding-left: 8px;
         }
-    } 
-    
+    }
+
     /* Display full title of video on wacthcpage */
     if (display-full-title) {
         ytd-rich-grid-media[mini-mode] #video-title.ytd-rich-grid-media,
@@ -132,25 +138,21 @@ Support me: https://ko-fi.com/sapondanaisriwan
     /* Removes chips */
     if (remove-chips) {
         #header ytd-feed-filter-chip-bar-renderer,
-        ytd-watch-next-secondary-results-renderer  yt-related-chip-cloud-renderer {
+        ytd-watch-next-secondary-results-renderer yt-related-chip-cloud-renderer {
             display: none;
         }
     }
-    
+
     ytd-watch-metadata {
         display: none !important;
     }
     #meta-contents[hidden],
     #info-contents[hidden] {
         display: block !important;
-    }
-
-    
-    ytd-rich-item-renderer {
-        margin-right: 0 !important;
-        margin-bottom: 25px !important;
-    }
-    
+    } // ytd-rich-item-renderer {
+    //     margin-right: 0 !important;
+    //     margin-bottom: 25px !important;
+    // }
     /* Permanent fixes */
     /* Removes second comment section, */
     #comment-teaser.ytd-watch-metadata {
@@ -324,6 +326,20 @@ Support me: https://ko-fi.com/sapondanaisriwan
     ytd-video-preview[rounded-container] #inline-preview-player.ytd-video-preview {
         border-radius: 0 !important;
     }
+
+    /* Removes border while hover the video */
+    ytd-video-preview:not([has-endorsement]) #inline-preview-player.ytp-rounded-inline-preview .html5-main-video {
+        border-radius: 0 !important;
+    }
+
+    /* Removes border from miniplayer */
+    ytd-miniplayer[rounded-container] #player-container.ytd-miniplayer,
+    ytd-miniplayer[rounded-container] #video-container.ytd-miniplayer .video.ytd-miniplayer,
+    ytd-miniplayer[rounded-container] #card.ytd-miniplayer,
+    ytd-miniplayer[rounded-container] {
+        border-radius: 0 !important;
+    }
+
     /* Removes border around Live chat */
     ytd-live-chat-frame[rounded-container],
     ytd-live-chat-frame[rounded-container] #show-hide-button.ytd-live-chat-frame ytd-toggle-button-renderer.ytd-live-chat-frame,
@@ -387,6 +403,12 @@ Support me: https://ko-fi.com/sapondanaisriwan
     }
     /* Home posts section */
     ytd-post-renderer[rounded-container] {
+        border-radius: 0 !important;
+    }
+
+    /* Setting gear icon */
+    .ytp-settings-menu.ytp-rounded-menu,
+    .ytp-screen-mode-menu.ytp-rounded-menu {
         border-radius: 0 !important;
     }
 
@@ -455,7 +477,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
     #creator-heart-button button #hearted-thumbnail {
         margin-left: 0;
     }
-    
+
     /* Hearted comment */
     #hearted.ytd-creator-heart-renderer {
         right: 10px !important;
@@ -468,7 +490,6 @@ Support me: https://ko-fi.com/sapondanaisriwan
     // .yt-spec-button-shape-next--disabled {
     //     cursor: pointer;
     // }
-    
     // #chips-wrapper.ytd-feed-filter-chip-bar-renderer {
     //     justify-content: flex-start;
     // }
@@ -476,8 +497,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
     //     margin: 0 !important;
     //     display: block;
     // }
-
-    /* Homepage display 6 vidoes per row or we need js?*/
+    /* Homepage display 6 vidoes per row or it cant be done with css alone so we need js?*/
     // ytd-rich-grid-row #contents {
     //     display: inline-block;
     //     margin: 10px 0 0 2%;
