--- a/Youtube Old Layout.user.css
+++ b/Youtube Old Layout.user.css
@@ -6,7 +6,7 @@
 @homepageURL    https://github.com/sapondanaisriwan/Youtube-Old-Layout
 @supportURL     https://github.com/sapondanaisriwan/Youtube-Old-Layout/issues
 @updateURL      https://userstyles.world/api/style/6944.user.css
-@version        1.2.8
+@version        1.2.9
 @license        MIT
 @preprocessor   stylus
 
@@ -23,6 +23,7 @@
 @advanced checkbox hide-thanks-btn "🫣 Hide Thanks Button" 0
 @advanced checkbox display-full-title "🎦 Display Video Full Title" 1
 @advanced checkbox fix-search-results  "➡️ Align the search results to the center" 0
+@advanced checkbox fix-homepage  "🏠 Homepage 6 videos per row" 0
 
 ==/UserStyle== */
 // @advanced checkbox fix-homepage  "🏠 Homepage 6 videos per row" 0
@@ -255,7 +256,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
             background-color: var(--sub-black-bg-btn) !important;
         }
     }
-
+    
     /* Add red background color to Subscribed button */
     .yt-spec-button-shape-next--mono.yt-spec-button-shape-next--filled,
     .yt-spec-button-shape-next--overlay.yt-spec-button-shape-next--filled[aria-label^="Subscribe"],
@@ -274,8 +275,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
     .yt-spec-button-shape-next--size-m.yt-spec-button-shape-next--segmented-start::after {
         display: none;
     }
-
-
+    
     .yt-spec-button-shape-next--mono.yt-spec-button-shape-next--tonal,
     .yt-spec-touch-feedback-shape__fill {
         background-color: transparent !important;
@@ -395,6 +395,11 @@ Support me: https://ko-fi.com/sapondanaisriwan
         border-radius: 0 !important;
     }
 
+    /* the end of the video */
+    .ytp-autonav-endscreen-upnext-button.ytp-autonav-endscreen-upnext-button-rounded {
+        border-radius: 0 !important;
+    }
+
     ytd-expandable-metadata-renderer[round-container]:not([is-expanded]) {
         --yt-img-border-radius: 0;
     }
@@ -499,38 +504,41 @@ Support me: https://ko-fi.com/sapondanaisriwan
     //     display: block;
     // }
     /* Homepage display 6 vidoes per row or it cant be done with css alone so we need js?*/
-    // ytd-rich-grid-row #contents {
-    //     display: inline-block;
-    //     margin: 10px 0 0 2%;
-    //     flex-grow: 1;
-    //     width: calc(25% * (1/6) - 10px - 1px);
-    // }
-    // ytd-rich-grid-media {
-    //     display: inline-block !important;
-    // }
-    // ytd-rich-item-renderer {
-    //       width: calc(100% - 10px);
-    // }
-    // ytd-rich-grid-row {
-    //     display: flex;
-    //     flex-wrap: wrap;
-    // }
-    // [page-subtype="home"] ytd-rich-grid-renderer {
-    //     --ytd-rich-grid-items-per-row: 6 !important;
-    // }
-    // #home-page-skeleton .rich-shelf-videos .rich-grid-media-skeleton.mini-mode,
-    // #home-page-skeleton #home-container-media .rich-grid-media-skeleton.mini-mode {
-    //     flex-basis: calc(100%/6 - 16px - 0.01px);
-    //     min-width: calc(100%/6 - 16px - 0.01px);
-    //     max-width: calc(100%/6 - 16px - 0.01px);
-    // }
-    // #home-page-skeleton {
-    //     margin-top: 50px;
-    // }
-    // #home-page-skeleton .rich-shelf-videos,
-    // #home-page-skeleton #home-container-media {
-    //     margin-left: 8vw;
-    //     margin-right: 8vw;
-    //     transform: translate(20px, -2px);
+    // if (fix-homepage) {
+        // ytd-rich-grid-row #contents {
+        //     display: inline-block;
+        //     margin: 10px 0 0 2%;
+        //     flex-grow: 1;
+        //     width: calc(25% * (1/6) - 10px - 1px);
+        // }
+        // // ytd-rich-grid-media {
+        // //     display: inline-block !important;
+        // // }
+        // ytd-rich-item-renderer {
+        //     width: calc(100% - 10px);
+        // }
+
+    //     ytd-rich-grid-row {
+    //         display: flex;
+    //         flex-wrap: wrap;
+    //     }
+    //     [page-subtype="home"] ytd-rich-grid-renderer {
+    //         --ytd-rich-grid-items-per-row: 6 !important;
+    //     }
+    //     #home-page-skeleton .rich-shelf-videos .rich-grid-media-skeleton.mini-mode,
+    //     #home-page-skeleton #home-container-media .rich-grid-media-skeleton.mini-mode {
+    //         flex-basis: calc(100%/6 - 16px - 0.01px);
+    //         min-width: calc(100%/6 - 16px - 0.01px);
+    //         max-width: calc(100%/6 - 16px - 0.01px);
+    //     }
+    //     #home-page-skeleton {
+    //         margin-top: 50px;
+    //     }
+    //     #home-page-skeleton .rich-shelf-videos,
+    //     #home-page-skeleton #home-container-media {
+    //         margin-left: 8vw;
+    //         margin-right: 8vw;
+    //         transform: translate(20px, -2px);
+    //     }
     // }
 }
