--- a/Youtube Old Layout.user.css
+++ b/Youtube Old Layout.user.css
@@ -6,7 +6,7 @@
 @homepageURL    https://github.com/sapondanaisriwan/Youtube-Old-Layout
 @supportURL     https://github.com/sapondanaisriwan/Youtube-Old-Layout/issues
 @updateURL      https://userstyles.world/api/style/6944.user.css
-@version        1.3.1
+@version        1.3.2
 @license        MIT
 @preprocessor   stylus
 
@@ -22,7 +22,7 @@
 @advanced checkbox hide-clip-btn "🫣 Hide Clip Button" 0
 @advanced checkbox hide-thanks-btn "🫣 Hide Thanks Button" 0
 @advanced checkbox display-full-title "🎦 Display Video Full Title" 1
-@advanced checkbox fix-search-results  "➡️ Align the search results to the center" 0
+@advanced checkbox fix-search-results  "➡️ Centered The Search Results" 0
 
 ==/UserStyle== */
 // @advanced checkbox fix-homepage  "🏠 Homepage 6 videos per row" 0
@@ -34,6 +34,82 @@ Support me: https://ko-fi.com/sapondanaisriwan
 Support me: https://ko-fi.com/sapondanaisriwan
 */
 @-moz-document domain("youtube.com") {
+
+
+    
+    h1.ytd-watch-metadata {
+        font-family: "Roboto", sans-serif;
+        font-weight: 400 !important;
+        font-size: 18px !important;
+    }
+    
+    #owner {
+        //channel
+        display: none !important;
+    }
+
+    #bottom-row {
+        // description
+        display: none !important;
+    }
+
+    // ytd-video-primary-info-renderer #menu ytd-menu-renderer {
+    //     display: none !important;
+    // }
+
+    .ryd-tooltip.ryd-tooltip-new-design {
+        display: block !important;
+    }
+    
+    #menu-container {
+        display: none !important;
+    }
+    
+    ytd-video-primary-info-renderer #container > :not(#info), #menu-container {
+        display: none !important;
+    }
+    
+    ytd-video-primary-info-renderer {
+        padding: 0 !important;
+        position: relative;
+        bottom: 0 !important;
+        border: none;
+        pointer-events: auto; 
+    }
+    
+    ytd-video-secondary-info-renderer {
+        margin-top: -20px;
+    }
+    
+    ytd-watch-metadata > ytd-metadata-row-container-renderer {
+        display: none;
+    }
+    
+    // #info-contents > ytd-video-primary-info-renderer div:not(#info-text) {
+    //     display: none !important;
+    // }
+    
+//     #title > h1 > yt-formatted-string {
+//         // visibility: hidden;
+//         display: none !important;
+//     }
+
+    
+     .style-scope.ytd-watch-flexy #container #info-text {
+        margin-top: -120px;
+        pointer-events: none; 
+    }
+    
+    #top-row.ytd-watch-metadata,
+    #top-row.ytd-watch-metadata {
+        flex-direction: column-reverse !important;
+    }
+    #ryd-bar {
+        background: lime !important;
+    }
+    #ryd-bar-container {
+        background: red !important;
+    }
 
     :root {
         --sub-red-btn: #CC0000;
@@ -60,6 +136,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
             fill: like-dislike-color2 !important;
         }
     }
+
 
     if(hide-download-btn) {
         ytd-download-button-renderer {
@@ -111,7 +188,8 @@ Support me: https://ko-fi.com/sapondanaisriwan
     /* Removes text on all buttons except for like/dislike buttons */
     if (remove-text-btn) {
         #menu-container ytd-button-renderer yt-button-shape button span,
-        #flexible-item-buttons yt-button-shape button span {
+        #flexible-item-buttons yt-button-shape button span,
+        #top-level-buttons-computed > ytd-button-renderer > yt-button-shape > button > div.cbox.yt-spec-button-shape-next--button-text-content > span{
             display: none !important;
         }
         #flexible-item-buttons yt-button-shape button {
@@ -142,10 +220,11 @@ Support me: https://ko-fi.com/sapondanaisriwan
             display: none;
         }
     }
-
-    ytd-watch-metadata {
-        display: none !important;
-    }
+    
+    // ytd-watch-metadata {
+    //     display: none !important;
+    // }
+   
     #meta-contents[hidden],
     #info-contents[hidden] {
         display: block !important;
@@ -200,12 +279,12 @@ Support me: https://ko-fi.com/sapondanaisriwan
         position: relative;
         bottom: 6px;
     }
-    .ryd-tooltip-bar-container {
-        padding-top: 0;
-        padding-bottom: 0px;
-        top: -8px;
-        bottom: 0;
-    }
+    // .ryd-tooltip-bar-container {
+    //     padding-top: 0;
+    //     padding-bottom: 0px;
+    //     top: -8px;
+    //     bottom: 0;
+    // }
     #top-row.style-scope.ytd-video-secondary-info-renderer {
         padding-top: 4px;
     }
@@ -233,7 +312,6 @@ Support me: https://ko-fi.com/sapondanaisriwan
         padding-left: 6px
     }
 
-
     /* Change color of Unsubscribe button */
     /* Light theme users */
     html:not([dark]) {
@@ -241,7 +319,8 @@ Support me: https://ko-fi.com/sapondanaisriwan
         #channel-container, // Profile Channels
         ytd-video-secondary-info-renderer, // Watch Page
         ytd-shorts, // Shots
-        #content-section {
+        #content-section,
+        #channel-header-container {
             #subscribe ytd-subscribe-button-renderer yt-button-shape button[aria-label^=Unsubscribe],
             #subscribe-button yt-button-shape button[aria-label^=Unsubscribe] {
                 color: #82807F !important;
@@ -257,7 +336,8 @@ Support me: https://ko-fi.com/sapondanaisriwan
         #channel-container, // Profile Channels
         ytd-video-secondary-info-renderer, // Watch Page
         ytd-shorts, // Shots
-        #content-section {
+        #content-section,
+        #channel-header-container {
             #subscribe ytd-subscribe-button-renderer yt-button-shape button[aria-label^=Unsubscribe],
             #subscribe-button yt-button-shape button[aria-label^=Unsubscribe] {
                 color: #82807F !important;
@@ -272,7 +352,9 @@ Support me: https://ko-fi.com/sapondanaisriwan
     #channel-container, // Profile Channel
     ytd-video-secondary-info-renderer, // Watch Page
     ytd-shorts, // Shots
-    #content-section {
+    #content-section,
+    #channel-header-container,
+    ytd-button-renderer {
         #subscribe ytd-subscribe-button-renderer yt-button-shape button,
         #subscribe-button ytd-subscribe-button-renderer yt-button-shape button {
             border-radius: 0;
@@ -388,6 +470,12 @@ Support me: https://ko-fi.com/sapondanaisriwan
     ytd-guide-entry-renderer[guide-refresh] yt-interaction.ytd-guide-entry-renderer {
         border-radius: 0 !important;
     }
+
+    .ytp-sb-subscribe.ytp-sb-rounded,
+    .ytp-sb-unsubscribe.ytp-sb-rounded {
+        border-radius: 0;
+    }
+
     /* Gaming */
     ytd-game-details-renderer[rounded] yt-img-shadow.ytd-game-details-renderer ytd-video-preview[rounded-container] #video-preview-container.ytd-video-preview,
     ytd-video-preview[rounded-container] #player-container.ytd-video-preview,
@@ -417,6 +505,10 @@ Support me: https://ko-fi.com/sapondanaisriwan
 
     /* the end of the video */
     .ytp-autonav-endscreen-upnext-button.ytp-autonav-endscreen-upnext-button-rounded {
+        border-radius: 0 !important;
+    }
+
+    a.ytd-search-refinement-card-renderer {
         border-radius: 0 !important;
     }
 
@@ -451,6 +543,17 @@ Support me: https://ko-fi.com/sapondanaisriwan
     ytd-rich-metadata-renderer[rounded] {
         border-radius: 0 !important;
     }
+
+    /* Removes border around search box */
+    .sbdd_b {
+        border-radius: 0 !important;
+    }
+
+    .ytp-sb-subscribe.ytp-sb-rounded,
+    .ytp-sb-unsubscribe.ytp-sb-rounded {
+        border-radius: 0 !important;
+    }
+
     yt-formatted-string#index.style-scope.ytd-playlist-video-renderer {
         display: inline !important;
     }
@@ -463,10 +566,6 @@ Support me: https://ko-fi.com/sapondanaisriwan
 
     yt-button-shape span[role="text"] {
         text-transform: uppercase;
-    }
-    /* Removes border around search box */
-    .sbdd_b {
-        border-radius: 0 !important;
     }
 
     .yt-spec-button-shape-next--call-to-action.yt-spec-button-shape-next--outline {
